--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ hs_err_pid*
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+/.idea/workspace.xml
