--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ hs_err_pid*
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
 /.idea/workspace.xml
+/.idea/uiDesigner.xml
