--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,6 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.apache.commons:commons-text:1.7'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
