--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ hs_err_pid*
 /.idea/workspace.xml
 /.idea/uiDesigner.xml
 /.idea/inspectionProfiles/Project_Default.xml
+/src/main/resources/*.input.txt
