--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,4 @@ hs_err_pid*
 /.idea/workspace.xml
 /.idea/uiDesigner.xml
 /.idea/inspectionProfiles/Project_Default.xml
-/src/main/resources/*_input.txt
+/src/main/resources/*/*_input.txt
