--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ hs_err_pid*
 /.idea/uiDesigner.xml
 /.idea/inspectionProfiles/Project_Default.xml
 /src/main/resources/*/*_input.txt
+/.idea/inspectionProfiles/profiles_settings.xml
