--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'net.lsmith946.adventofcode2020'
+group 'net.lsmith946.adventofcode'
 version '1.0-SNAPSHOT'
 
 repositories {
