Don't run tests as part of Gradle build for CodeQL

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -79,7 +79,7 @@ jobs:
 
     - run: |
          echo "Run, Build Application using script"
-         ./gradlew build
+         ./gradlew assemble
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
