--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # Log file
 *.log
+*_input.txt
 
 # Package Files #
 *.jar
@@ -22,8 +23,9 @@ hs_err_pid*
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+
 /.idea/workspace.xml
 /.idea/uiDesigner.xml
 /.idea/inspectionProfiles/Project_Default.xml
-/src/main/resources/*/*_input.txt
 /.idea/inspectionProfiles/profiles_settings.xml
+*/resources/session_cookie
