Update existing puzzles to use the new input loader which downloads the input from the website if it is not already Update location of session cookie in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,4 @@ hs_err_pid*
 /.idea/uiDesigner.xml
 /.idea/inspectionProfiles/Project_Default.xml
 /.idea/inspectionProfiles/profiles_settings.xml
-*/resources/session_cookie
+/session_cookie
