--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ test {
 
 dependencies {
     implementation 'org.apache.commons:commons-text:1.11.0'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
 }
